--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# dependencies
+# Dependencies
 node_modules/
+npm-debug.*
+yarn-debug.*
+yarn-error.*
 
 # Expo
 .expo/
@@ -21,17 +24,104 @@ expo-env.d.ts
 # Metro
 .metro-health-check*
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
 # macOS
 .DS_Store
 *.pem
 
-# local env files
+# Environment files
+.env
 .env*.local
+.env.production
+.env.development
 
-# typescript
+# TypeScript
 *.tsbuildinfo
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Logs
+*.log
+logs/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Android/Gradle
+android/app/build/
+android/build/
+android/.gradle/
+android/app/release/
+android/app/debug/
+android/keystore.properties
+
+# iOS
+ios/build/
+ios/Pods/
+ios/*.xcworkspace
+ios/*.xcodeproj/xcuserdata/
+ios/*.xcodeproj/project.xcworkspace/xcuserdata/
+
+# Flipper
+flipper-rn-addons.podspec.json
+
+# Solana/Crypto specific
+# Don't commit actual wallet files (if any)
+wallet.json
+keypair.json
+*.wallet
+
+# Test data (your publishing content)
+test-content/
+test-files/
+
+# Local AsyncStorage dumps (if you export them)
+storage-dump.json
+asyncstorage-backup.json
+
+# Expo EAS
+eas.json.local
+
+# Bundle artifacts
+*.bundle
+
+# CocoaPods
+Podfile.lock
