--- a/package.json
+++ b/package.json
@@ -9,13 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/stack": "^7.4.2",
+    "@solana/web3.js": "^1.98.2",
     "expo": "~53.0.17",
+    "expo-constants": "^17.1.7",
+    "expo-crypto": "^14.1.5",
+    "expo-document-picker": "^13.1.6",
+    "expo-file-system": "^18.1.11",
+    "expo-random": "^14.0.1",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-keychain": "^10.0.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.12.0",
+    "react-native-super-grid": "^6.0.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^19.1.8",
+    "@types/react-native": "^0.72.8",
+    "eslint": "^8.57.1",
+    "prettier": "^3.6.2"
   },
   "private": true
 }
