phase 1 security and wallet updates...still buggin

--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "@solana/web3.js": "^1.98.2",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "expo": "~53.0.17",
     "expo-constants": "^17.1.7",
     "expo-crypto": "^14.1.5",
     "expo-document-picker": "^13.1.6",
     "expo-file-system": "^18.1.11",
     "expo-random": "^14.0.1",
+    "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
+    "pako": "^2.1.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-elements": "^3.4.3",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-keychain": "^10.0.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.12.0",
