--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-random": "^14.0.1",
     "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.525.0",
     "pako": "^2.1.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
