--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,12 @@ coverage/
 # nyc test coverage
 .nyc_output
 
+# Jest test coverage
+junit.xml                    
+test-results.json            
+.jest-cache/                
+**/__tests__/**/__snapshots__/
+
 # Dependency directories
 jspm_packages/
 
