--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:storage": "jest src/services/storage/__tests__",
+    "test:publishing": "jest src/services/publishing/__tests__",
+    "test:hooks": "jest src/hooks/__tests__",
+    "test:verbose": "jest --verbose",
+    "test:silent": "jest --silent",
+    "test:update-snapshots": "jest --updateSnapshot"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -39,10 +48,68 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
+    "@testing-library/react-native": "^12.7.2",
     "@types/react": "^19.1.8",
     "@types/react-native": "^0.72.8",
     "eslint": "^8.57.1",
-    "prettier": "^3.6.2"
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "prettier": "^3.6.2",
+    "react-test-renderer": "19.0.0"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "<rootDir>/__tests__/setup.js"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.test.js",
+      "**/__tests__/**/*.spec.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/android/",
+      "<rootDir>/ios/",
+      "<rootDir>/.expo/"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|@react-native|@react-navigation|expo|@expo|react-native-vector-icons|react-native-super-grid|react-native-elements|react-native-paper|react-native-safe-area-context|react-native-screens|lucide-react-native|@react-native-async-storage|react-native-get-random-values)/)"
+    ],
+    "moduleNameMapper": {
+      "@react-native-async-storage/async-storage": "<rootDir>/__tests__/__mocks__/@react-native-async-storage/async-storage.js",
+      "expo-crypto": "<rootDir>/__tests__/__mocks__/expo-crypto.js",
+      "expo-document-picker": "<rootDir>/__tests__/__mocks__/expo-document-picker.js",
+      "expo-file-system": "<rootDir>/__tests__/__mocks__/expo-file-system.js",
+      "react-native-get-random-values": "<rootDir>/__tests__/__mocks__/react-native-get-random-values.js"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "json",
+      "ts",
+      "tsx"
+    ],
+    "collectCoverage": false,
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/**/*.test.{js,jsx}",
+      "!src/**/__tests__/**",
+      "!**/node_modules/**",
+      "!**/vendor/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 50,
+        "functions": 50,
+        "lines": 50,
+        "statements": 50
+      }
+    },
+    "testEnvironment": "node",
+    "verbose": true,
+    "clearMocks": true,
+    "restoreMocks": true
+  }
 }
