--- a/package.json
+++ b/package.json
@@ -48,14 +48,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
-    "@testing-library/react-native": "^12.7.2",
     "@types/react": "^19.1.8",
     "@types/react-native": "^0.72.8",
     "eslint": "^8.57.1",
+    "prettier": "^3.6.2",
+    "@testing-library/react-native": "^12.7.2",
+
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "prettier": "^3.6.2",
+
     "react-test-renderer": "19.0.0"
   },
   "private": true,
@@ -64,52 +65,13 @@
     "setupFilesAfterEnv": [
       "<rootDir>/__tests__/setup.js"
     ],
-    "testMatch": [
-      "**/__tests__/**/*.test.js",
-      "**/__tests__/**/*.spec.js"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/android/",
-      "<rootDir>/ios/",
-      "<rootDir>/.expo/"
-    ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(react-native|@react-native|@react-navigation|expo|@expo|react-native-vector-icons|react-native-super-grid|react-native-elements|react-native-paper|react-native-safe-area-context|react-native-screens|lucide-react-native|@react-native-async-storage|react-native-get-random-values)/)"
+      "node_modules/(?!(react-native|@react-native|expo|@expo|@react-native-async-storage)/)"
     ],
     "moduleNameMapper": {
-      "@react-native-async-storage/async-storage": "<rootDir>/__tests__/__mocks__/@react-native-async-storage/async-storage.js",
-      "expo-crypto": "<rootDir>/__tests__/__mocks__/expo-crypto.js",
-      "expo-document-picker": "<rootDir>/__tests__/__mocks__/expo-document-picker.js",
-      "expo-file-system": "<rootDir>/__tests__/__mocks__/expo-file-system.js",
-      "react-native-get-random-values": "<rootDir>/__tests__/__mocks__/react-native-get-random-values.js"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "jsx",
-      "json",
-      "ts",
-      "tsx"
-    ],
-    "collectCoverage": false,
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!src/**/*.test.{js,jsx}",
-      "!src/**/__tests__/**",
-      "!**/node_modules/**",
-      "!**/vendor/**"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 50,
-        "functions": 50,
-        "lines": 50,
-        "statements": 50
-      }
+      "@react-native-async-storage/async-storage": "<rootDir>/__tests__/__mocks__/@react-native-async-storage/async-storage.js"
     },
     "testEnvironment": "node",
-    "verbose": true,
-    "clearMocks": true,
-    "restoreMocks": true
+    "verbose": true
   }
 }
