--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
-    "@solana/web3.js": "^1.98.2",
+    "@solana/web3.js": "^1.98.4",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "events": "^3.3.0",
     "expo": "~53.0.17",
     "expo-constants": "^17.1.7",
@@ -48,30 +49,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.7.2",
     "@types/react": "^19.1.8",
     "@types/react-native": "^0.72.8",
     "eslint": "^8.57.1",
-    "prettier": "^3.6.2",
-    "@testing-library/react-native": "^12.7.2",
-
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-
+    "prettier": "^3.6.2",
     "react-test-renderer": "19.0.0"
   },
-  "private": true,
-  "jest": {
-    "preset": "react-native",
-    "setupFilesAfterEnv": [
-      "<rootDir>/__tests__/setup.js"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!(react-native|@react-native|expo|@expo|@react-native-async-storage)/)"
-    ],
-    "moduleNameMapper": {
-      "@react-native-async-storage/async-storage": "<rootDir>/__tests__/__mocks__/@react-native-async-storage/async-storage.js"
-    },
-    "testEnvironment": "node",
-    "verbose": true
-  }
+  "private": true
 }
