--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-random": "^14.0.1",
     "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
+    "js-sha256": "^0.11.1",
     "lucide-react-native": "^0.525.0",
     "pako": "^2.1.0",
     "react": "19.0.0",
